Fix: when the page is full, the last row is not 100% visible

--- a/src/app/core/containers/app/app.component.css
+++ b/src/app/core/containers/app/app.component.css
@@ -27,3 +27,8 @@ mat-list-item.selected {
     border-left: solid black 0.2rem;
     font-weight: bold;
 }
+
+:host {
+    flex-grow: 1;
+    flex-basis: auto;
+}
